# x39matrix-web

./: .gitignore  .ic-assets.json5  CNAME  MANIFEST_MAESTRO.txt  MANIFEST_MAESTRO.txt.ots  MASTER_GOLDEN_SEAL.txt  MASTER_GOLDEN_SEAL.txt.ots  PUBLIC_VERIFY_X39_FULL.sh  RECORDS.md  RECORDS.md.ots  X39MATRIX_WHITEPAPER_v1.0.pdf.ots  audit_full_1779229749009834030.candid  audit_full_v1.candid  backend_test.py  canister_ids.json  design_guidelines.json  dfx.json  index.html  index_backup.html  manifest.json  service-worker.js  x39_image_gen.py  x39matrix-cli.sh  x39matrix_certification_ar.html  x39matrix_certification_en.html  x39matrix_certification_zh.html  x39matrix_landing_modified.html  x39matrix_updated.html
.emergent/: emergent.yml
.github/workflows/: verify-anchors.yml
.well-known/: ic-domains
Notary/: index.html
Reproduce/: index.html
backend/: requirements.txt  server.py
backend/static/: Dockerfile.verifier  Dockerfile.verifier.ots  PARCHE_VERIFY_SH.md  PARCHE_VERIFY_SH.md.ots  X39MATRIX_AUDIT_JURADO_E1.md  X39MATRIX_AUDIT_JURADO_E1.pdf.ots  X39MATRIX_BRIEFING_OPUS_4_8.md  X39MATRIX_BRIEFING_OPUS_4_8.pdf.ots  X39MATRIX_DFINITY_GRANT_APPLICATION.md  X39MATRIX_DFINITY_GRANT_APPLICATION.pdf.ots  X39MATRIX_LAYER10_SPRINT2_DESIGN.md  X39MATRIX_LAYER10_SPRINT2_DESIGN.pdf.ots  X39MATRIX_OPENSATS_APPLICATION.md  X39MATRIX_OPENSATS_APPLICATION.pdf.ots  X39MATRIX_OPENSATS_REFERENCE_TEMPLATE.md  X39MATRIX_OPENSATS_REFERENCE_TEMPLATE.md.ots  X39MATRIX_OPENSATS_REFERENCE_TEMPLATE.pdf.ots  X39MATRIX_PITCH_INVERSOR_SEVILLA_v4.1.pdf.ots  X39MATRIX_PITCH_INVERSOR_SEVILLA_v4.1.pdf.ots.bak  email_camara_sevilla.html  (+9 more)
backend/static/x39_pq_probe/: Cargo.toml  DEPLOY_PROBE.md  dfx.json  x39_pq_probe.did
backend/static/x39_pq_probe/src/: lib.rs
endorse/: X39MATRIX_OUTREACH_KIT.md
evidence/: x39matrix_audit_response_v1.md  x39matrix_audit_response_v1.md.ots  x39matrix_internal_analysis_global_v1.md  x39matrix_internal_analysis_global_v1.md.ots
frontend/: package.json
lang/: dictionary.json  i18n.js
memory/: COVER_LETTER.md  DFINITY_DEVELOPER_GRANT.md  NLnet_NGI0_PET_APPLICATION.md  OpenSats_APPLICATION.md  PRD.md  VENICE_AI_SPRINT_PROMPTS.md  X39MATRIX_BRIEFING_ASESORIA.md  X39MATRIX_FIX_REAL_v2.md  X39MATRIX_PITCH_SEVILLA.md  X39MATRIX_VENICE_AI_ANALYSIS_v1.0.md
memory/x39_pq_probe/: Cargo.toml
memory/x39_pq_probe/src/: lib.rs  x39_pq_probe.did
notary/: MANIFEST.txt  MASTER_GOLDEN_SEAL.txt  MASTER_GOLDEN_SEAL.txt.ots  x39_cert_pqc_bundle.tar.gz.ots  x39_cert_pqc_bundle.tar.gz.sha256
outreach/: 01_twitter_thread.md  02_reddit_bitcoin.md  03_reddit_cypherpunks.md  04_hackernews_showhn.md  05_email_adam_back.md  06_email_peter_todd.md  07_email_trailofbits.md  08_dfinity_forum_bump.md  09_arxiv_preprint_abstract.md  README.md  index.html
records/: index.html
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
use_cases/: 01_defi.md  02_banking.md  03_security.md  04_crosschain.md  05_identity.md  06_deai.md  07_supply_chain.md  08_defense.md  09_gaming.md  10_research.md
x39matrix/: CHECKPOINT_20260627_P0_CLOSED.md  VERIFY_ARN4R_MODULE_HASH.sh  apply_p0_patches.py  apply_p0_patches_safe.py  apply_p0_patches_v2.py  x39_pq_probe_Cargo.toml  x39_pq_probe_lib.rs
(+189 files in other folders)
