[package]
name    = "x39_pq_probe"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "X39MATRIX — ML-DSA-87 instruction-cost probe (NON-PRODUCTION)"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk      = "0.17"
candid      = "0.10"
serde       = { version = "1",     features = ["derive"] }
fips204     = "0.4"
rand_chacha = { version = "0.3",   default-features = false }
rand_core   = { version = "0.6",   default-features = false }
sha2        = { version = "0.10",  default-features = false }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = "symbols"
panic         = "abort"
